--- a/index.html
+++ b/index.html
@@ -201,15 +201,11 @@
         <div class = "information__section">
             <div class = "recruit__img">
                 <img src = "img/recruit.png" alt = "" />
-            </div>
-            <div class = "recruit__content">
-                <h2 class = "recruit__content-ttl">採用情報</h2>
+                <div class = "recruit__text">採用情報</div>
             </div>
             <div class = "interview__img">
                 <img src = "img/interview.png" alt = "" />
-            </div>
-            <div class = "interview__content">
-                <h2 class = "interview__content-ttl">社員インタビュー</h2>
+                <div class = "interview__text">社員インタビュー</div>
             </div>
         </div>
 
