--- a/index.html
+++ b/index.html
@@ -59,15 +59,13 @@
                 <h3 class = "about__main-ttl">Technology & Coaching</h3>
             </div>
             <div class = "about__text">
-                <p class = "about__text1">株式会社estraはデジタル化が遅れている教育業界に<br>
-                最新のテクノロジーを導入することによって教育の<br>
-                DXを実現します。
-                <p class = "about__text2">独自のオペレーションとコーチングを融合した新しい<br>
-                教育の仕組みにより、一人ひとりに合わせた適切な教<br>
-                育を提供します。</p>
-                </p>
-            </div>
-            <div class = "about__image">
+                <div class = "about__text-ttl">株式会社estraはデジタル化が遅れている教育業界に<br>
+                最新のテクノロジーを導入することによって教育の<br>DXを実現します。
+                <div style="margin-top: 30px;"></div>
+                独自のオペレーションとコーチングを融合した新しい<br>
+                教育の仕組みにより、一人ひとりに合わせた適切な教<br>育を提供します。
+                </div>
+                <div class = "about__image">
                 <img class ="about.jpg" src = "img/about.jpg">
             </div>
         </div>
