--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                   <img src = "img/service__first.svg" alt = "" />
                   <div class= "service__content_vol1">教育事業</div>
                     <h5 class ="service__content__text_vol1">
-                    サンプルテキストがここには入ります。サンプルテキ<br>
-                    ストがここには入ります。サンプルテキストがここ<br>
-                    には入ります。</h5>
+                    サンプルテキストがここには入ります。<br>
+                    サンプルテキストがここには入ります。<br>
+                    サンプルテキストがここには入ります。</h5>
                   </div>
               </div>
               <div class = "service__card_vol2">
