--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 教育の仕組みにより、一人ひとりに合わせた適切な教<br>育を提供します。
                 </div>
                 <div class = "about__image">
-                <img class ="about.jpg" src = "img/about.jpg">
+                  <img class ="about.jpg" src = "img/about.jpg">
+                </div>
             </div>
         </div>
 
@@ -79,35 +80,39 @@
               <div class = "service__card_vol1">
                 <div class = "service__card__img1">
                   <img src = "img/service__first.svg" alt = "" />
-                  <div class= "service__content_vol1">教育事業</div>
-                    <h5 class ="service__content__text_vol1">
-                    サンプルテキストがここには入ります。<br>
-                    サンプルテキストがここには入ります。<br>
-                    サンプルテキストがここには入ります。</h5>
-                  </div>
+                </div>
+                <div class= "service__content_vol1">教育事業
+                    <p class ="service__content__text_vol1">
+                    サンプルテキストがここには入ります。サンプルテキ<br>
+                    ストがここには入ります。サンプルテキストがここ<br>
+                    には入ります。</p>
+                </div>
               </div>
               <div class = "service__card_vol2">
                 <div class = "service__card__img2">
                   <img src = "img/service__first.svg" alt = "" />
-                  <div class= "service__content_vol2">教育事業</div>
-                    <h5 class ="service__content__text_vol2">
+                </div>
+                <div class= "service__content_vol2">教育事業
+                  <p class ="service__content__text_vol1">
                     サンプルテキストがここには入ります。<br>
                     サンプルテキストがここには入ります。<br>
-                    サンプルテキストがここには入ります。</h5>
-                  </div>
+                    サンプルテキストがここには入ります。</p>
+                </div>
               </div>
               <div class = "service__card_vol3">
                 <div class = "service__card__img3">
                   <img src = "img/service__first.svg" alt = "" />
-                  <div class= "service__content_vol3">教育事業</div>
-                    <h5 class ="service__content__text_vol3">
-                    サンプルテキストがここには入ります。<br>
-                    サンプルテキストがここには入ります。<br>
-                    サンプルテキストがここには入ります。</h5>
-                  </div>
                 </div>
+                <div class= "service__content_vol3">教育事業
+                  <p class ="service__content__text_vol1">
+                    サンプルテキストがここには入ります。<br>
+                    サンプルテキストがここには入ります。<br>
+                    サンプルテキストがここには入ります。</p>
+                </div>
+              </div>
             </div>
         </div>
+        
 
         <div class = "blog__section">
             <div class = "blog__inner">
